--- a/client/src/layouts/Layout.astro
+++ b/client/src/layouts/Layout.astro
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang='es'>
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta charset='UTF-8' />
+		<meta name='viewport' content='width=device-width' />
+		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+		<meta name='generator' content={Astro.generator} />
+		<title>App Notas</title>
 	</head>
 	<body>
 		<slot />
@@ -15,8 +15,7 @@
 <style>
 	html,
 	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+		background-color: #0c032fcf;
+		height: 100vh;
 	}
 </style>
