--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -8,6 +8,8 @@ import App from '@/components/App.jsx'
 ---
 
 <Layout>
-	<Nav />
-	<App client:only='react' />
+	<div class="min-h-screen grid grid-rows-[auto_1fr]">
+		<Nav />
+		<App client:only='react' />
+	</div>
 </Layout>
