--- a/client/src/layouts/Layout.astro
+++ b/client/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import '../styles/global.css'
+---
+
 <!doctype html>
 <html lang='es'>
 	<head>
@@ -7,14 +11,7 @@
 		<meta name='generator' content={Astro.generator} />
 		<title>App Notas</title>
 	</head>
-	<body>
+	<body class='bg-[#0c032fcf] h-[100vh]'>
 		<slot />
 	</body>
 </html>
-
-<style>
-	body {
-		background-color: #0c032fcf;
-		height: 100vh;
-	}
-</style>
