--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -8,7 +8,7 @@ import App from '@/components/App.jsx'
 ---
 
 <Layout>
-	<div class="min-h-screen grid place-items-center grid-rows-[auto_1fr]">
+	<div class="min-h-screen grid place-items-start grid-rows-[auto_1fr] gap-2">
 		<Nav />
 		<App client:only='react' />
 	</div>
