Agregar componente Footer, mejorar diseño de la página de inicio y ajustar estilos en LoginOrRegister y Layout

--- a/client/src/layouts/Layout.astro
+++ b/client/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ import { Toaster } from '@pheralb/toast';
 		<meta name='generator' content={Astro.generator} />
 		<title>App Notas</title>
 	</head>
-	<body class='bg-[#0c032fcf] h-[100vh]'>
+	<body class='bg-home h-[100vh]'>
 		<slot />
 		<Toaster client:load />
 	</body>
