--- a/client/src/layouts/Layout.astro
+++ b/client/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
 import '../styles/global.css'
 import { Toaster } from '@pheralb/toast';
+import { Nav } from '@/components/Nav.jsx'
+import { Footer } from '@/components/Footer.jsx'
 ---
 
 <!doctype html>
@@ -12,8 +14,10 @@ import { Toaster } from '@pheralb/toast';
 		<meta name='generator' content={Astro.generator} />
 		<title>App Notas</title>
 	</head>
-	<body class='bg-home h-[100vh]'>
+	<body class='bg-home h-[100vh] min-h-screen grid place-items-start md:place-items-center grid-rows-[auto_1fr_auto] gap-2'>
+		<Nav />
 		<slot />
+		<Footer />
 		<Toaster client:load />
 	</body>
 </html>
