--- a/client/src/pages/connect/[provider]/redirect.astro
+++ b/client/src/pages/connect/[provider]/redirect.astro
@@ -1,5 +1,5 @@
 ---
-export const prerender = true
+export const prerender = false
 export async function getStaticPaths() {
 	const providers = ['github', 'google', 'twitter']
 	return providers.map(provider => ({ params: { provider } }))
