Agregar tslib como dependencia y habilitar prerender en la página de redirección

--- a/client/src/pages/connect/[provider]/redirect.astro
+++ b/client/src/pages/connect/[provider]/redirect.astro
@@ -1,7 +1,7 @@
 ---
-export const prerender = false
+export const prerender = true
 export async function getStaticPaths() {
-	const providers = ['github', 'google', 'twitter']
+	const providers = ['github', 'google', 'twitter', 'discord']
 	return providers.map(provider => ({ params: { provider } }))
 }
 
