--- a/client/src/pages/dashboard/index.astro
+++ b/client/src/pages/dashboard/index.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from '@/layouts/Layout.astro'
 import { Dashboard } from '@/components/Dashboard.jsx'
+import Layout from '@/layouts/Layout.astro'
 ---
 
 <Layout>
-	<main class='flex flex-col items-center justify-start h-full w-full'>
-		<Dashboard client:only='react' />
+	<main class="flex h-full w-full flex-col items-center justify-start">
+		<Dashboard client:only="react" />
 	</main>
 </Layout>
