Implementa el componente ThemeToggle y ajusta la navegación para soportar el cambio de tema, pt1

--- a/client/src/layouts/Layout.astro
+++ b/client/src/layouts/Layout.astro
@@ -13,11 +13,22 @@ import '../styles/global.css'
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>App Notas</title>
+		<script is:inline>
+			const storedTheme = localStorage.getItem('theme')
+			const defaultTheme = 'dark'
+			const initialTheme = storedTheme || defaultTheme
+			if (initialTheme === 'dark') {
+				document.documentElement.classList.add('dark')
+			} else {
+				document.documentElement.classList.remove('dark')
+			}
+			localStorage.setItem('theme', initialTheme)
+		</script>
 	</head>
 	<body
 		class="bg-home grid h-[100vh] min-h-screen grid-rows-[auto_1fr_auto] place-items-start gap-2 md:place-items-center"
 	>
-		<Nav />
+		<Nav client:idle/>
 		<slot />
 		<Footer />
 		<Toaster client:load />
