Migrar componente Nav de JSX a Astro y actualizar su importación en el layout

--- a/client/src/layouts/Layout.astro
+++ b/client/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import { Footer } from '@/components/Footer.jsx'
-import { Nav } from '@/components/Nav.jsx'
+import Nav from '@/components/Nav.astro'
 import { Toaster } from '@pheralb/toast'
 import '../styles/global.css'
 ---
