Migrar componente Footer de JSX a Astro y actualizar su importación en el layout

--- a/client/src/layouts/Layout.astro
+++ b/client/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import { Footer } from '@/components/Footer.jsx'
+import Footer  from '@/components/Footer.astro'
 import Nav from '@/components/Nav.astro'
 import { Toaster } from '@pheralb/toast'
 import '../styles/global.css'
