--- a/client/src/layouts/Layout.astro
+++ b/client/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ import '../styles/global.css'
 	<body
 		class="bg-home grid h-[100vh] min-h-screen grid-rows-[auto_1fr_auto] place-items-start gap-2 md:place-items-center"
 	>
-		<Nav client:load/>
+		<Nav />
 		<slot />
 		<Footer />
 		<Toaster theme='light' client:load />
