--- a/client/src/pages/dashboard/index.astro
+++ b/client/src/pages/dashboard/index.astro
@@ -1,10 +1,10 @@
 ---
-import { Dashboard } from '@/components/Dashboard.jsx'
+import Dashboard from '@/components/Dashboard.astro'
 import Layout from '@/layouts/Layout.astro'
 ---
 
 <Layout>
 	<main class="flex h-full w-full flex-col items-center justify-start">
-		<Dashboard client:only="react" />
+		<Dashboard  />
 	</main>
 </Layout>
